--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
         </nav>
       </div>
 
+      <div class="banner">
+        <div class="heading">
+            <b>Welcome to My Portfolio</b>
+            <br>
+            <small>This is where you see all the details about myself</small>
+        </div>
+      </div>
+
       <div class="footer">
         Copyright&copy; Himanshu
       </div>
