--- a/index.html
+++ b/index.html
@@ -44,6 +44,28 @@
             <small>This is where you see all the details about myself</small>
         </div>
       </div>
+      <div class="maintext">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque saepe ipsam quia harum adipisci distinctio fuga nostrum. Accusantium ducimus porro tempora alias quasi ea delectus iste. Nostrum reprehenderit quasi repellendus!
+      </div>
+      <div class="subtext">
+        <div class="red">
+            <h3>HTML</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non at sed architecto rem animi porro numquam? Possimus explicabo tempora perferendis sint provident vero dolore amet aliquam quis, delectus quae doloremque!</p>
+        </div>
+
+        <div class="yellow">
+            <h3>CSS</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non at sed architecto rem animi porro numquam? Possimus explicabo tempora perferendis sint provident vero dolore amet aliquam quis, delectus quae doloremque!</p>
+        </div>
+
+        <div class="green">
+            <h3>Web Development</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Non at sed architecto rem animi porro numquam? Possimus explicabo tempora perferendis sint provident vero dolore amet aliquam quis, delectus quae doloremque!</p>
+        </div>
+      </div>
+      <blockquote class="quote">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat saepe unde dicta obcaecati, explicabo quasi?
+      </blockquote>
 
       <div class="footer">
         Copyright&copy; Himanshu
