--- a/index.html
+++ b/index.html
@@ -67,6 +67,30 @@
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Repellat saepe unde dicta obcaecati, explicabo quasi?
       </blockquote>
 
+      <h3 class="projHead">Projects</h3>
+      <div class="projects">
+        <div class="project">
+            <img src="https://robohash.org/100/stefan-one" alt="">
+            <h4>Project #1</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti consequuntur voluptatum, architecto accusantium quia cum modi. Animi harum tempore quas!</p>
+            <button>View Project</button>
+        </div>
+
+        <div class="project">
+            <img src="https://robohash.org/215/stefan-one" alt="">
+            <h4>Project #2</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti consequuntur voluptatum, architecto accusantium quia cum modi. Animi harum tempore quas!</p>
+            <button>View Project</button>
+        </div>
+
+        <div class="project">
+            <img src="https://robohash.org/221/stefan-one" alt="">
+            <h4>Project #3</h4>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti consequuntur voluptatum, architecto accusantium quia cum modi. Animi harum tempore quas!</p>
+            <button>View Project</button>
+        </div>
+      </div>
+
       <div class="footer">
         Copyright&copy; Himanshu
       </div>
